Enh 36535603 - [36535600->24.09] Add support for Java records to portable types
[git-p4: depot-paths = "//dev/coherence-ce/main/": change = 108619]