@@ -27,16 +27,14 @@ import com.tangosol.util.Base;
 import com.tangosol.util.Binary;
 import com.tangosol.util.BinaryEntry;
 import com.tangosol.util.ExternalizableHelper;
-
 import com.tangosol.util.Extractors;
 import com.tangosol.util.extractor.PofExtractor;
 import com.tangosol.util.extractor.PofExtractorTest;
+
 import data.evolvable.Color;
 import data.evolvable.DateTypes;
 
 import java.io.File;
-import java.lang.reflect.Constructor;
-
 import java.net.URL;
 import java.net.URLClassLoader;
 import java.nio.file.Files;
@@ -46,72 +44,105 @@ import java.util.HashMap;
 import java.util.Map;
 import java.util.Properties;
 
-import org.hamcrest.MatcherAssert;
-import org.junit.Before;
+import org.junit.BeforeClass;
 import org.junit.Test;
 
 import static com.tangosol.io.pof.reflect.PofReflectionHelper.getPofNavigator;
 import static org.hamcrest.CoreMatchers.equalTo;
 import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.CoreMatchers.notNullValue;
+import static org.hamcrest.MatcherAssert.assertThat;
 import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertThat;
-
 
 /**
  * @author as  2012.05.27
  */
+@SuppressWarnings({"unchecked", "rawtypes"})
 public class PortableTypeGeneratorTest
     {
-    private SimplePofContext ctx;
-    private ClassLoader loader = new PortableTypeLoader();
-    private Constructor allTypesCtor;
-    private Constructor dogCtor;
-    private Constructor terrierCtor;
+    private static SimplePofContext ctxV3;
+    private static SimplePofContext ctxV4;
+    private static final ClassLoader loader = new PortableTypeLoader();
 
-    @Before
+    @BeforeClass
     @SuppressWarnings("unchecked")
-    public void setup() throws Exception
+    public static void setup() throws Exception
         {
-        Class allTypes = loader.loadClass("data.evolvable.AllTypes");
-        allTypesCtor = allTypes.getConstructor();
+        Class<?> allTypes = loader.loadClass("data.evolvable.AllTypes");
+        Class<?> dogV3    = loader.loadClass("data.evolvable.v3.Dog");
+        Class<?> dogV4    = loader.loadClass("data.evolvable.v4.Dog");
+        Class<?> terrier  = loader.loadClass("data.evolvable.v3.Terrier");
 
-        Class dog = loader.loadClass("data.evolvable.v3.Dog");
-        dogCtor = dog.getConstructor(String.class, Integer.TYPE, String.class, Color.class);
+        ctxV3 = new SimplePofContext();
+        ctxV3.registerUserType(1, loader.loadClass("data.evolvable.v3.Pet"),
+                               new PortableTypeSerializer(1, loader.loadClass("data.evolvable.v3.Pet")));
+        ctxV3.registerUserType(2, dogV3, new PortableTypeSerializer(2, dogV3));
+        ctxV3.registerUserType(200, terrier, new PortableTypeSerializer(200, terrier));
+        ctxV3.registerUserType(3, loader.loadClass("data.evolvable.v3.Animal"),
+                               new PortableTypeSerializer(3, loader.loadClass("data.evolvable.v3.Animal")));
+        ctxV3.registerUserType(5, Color.class, new EnumPofSerializer<>());
+        ctxV3.registerUserType(10, loader.loadClass("data.evolvable.v3.Address"),
+                               new PortableTypeSerializer(10, loader.loadClass("data.evolvable.v3.Address")));
+        ctxV3.registerUserType(1000, allTypes, new PortableTypeSerializer(1000, allTypes));
 
-        Class terrier = loader.loadClass("data.evolvable.v3.Terrier");
-        terrierCtor = terrier.getConstructor(String.class, Integer.TYPE, Color.class);
-
-        ctx = new SimplePofContext();
-        ctx.registerUserType(1, loader.loadClass("data.evolvable.v3.Pet"),
-                             new PortableTypeSerializer(1, loader.loadClass("data.evolvable.v3.Pet")));
-        ctx.registerUserType(2, dog, new PortableTypeSerializer(2, dog));
-        ctx.registerUserType(200, terrier, new PortableTypeSerializer(200, terrier));
-        ctx.registerUserType(3, loader.loadClass("data.evolvable.v3.Animal"),
-                             new PortableTypeSerializer(3, loader.loadClass("data.evolvable.v3.Animal")));
-        ctx.registerUserType(5, Color.class, new EnumPofSerializer<>());
-        ctx.registerUserType(1000, allTypes, new PortableTypeSerializer(1000, allTypes));
+        ctxV4 = new SimplePofContext();
+        ctxV4.registerUserType(1, loader.loadClass("data.evolvable.v3.Pet"),
+                               new PortableTypeSerializer(1, loader.loadClass("data.evolvable.v3.Pet")));
+        ctxV4.registerUserType(2, dogV4, new PortableTypeSerializer(2, dogV4));
+        ctxV4.registerUserType(200, terrier, new PortableTypeSerializer(200, terrier));
+        ctxV4.registerUserType(3, loader.loadClass("data.evolvable.v3.Animal"),
+                               new PortableTypeSerializer(3, loader.loadClass("data.evolvable.v3.Animal")));
+        ctxV4.registerUserType(5, Color.class, new EnumPofSerializer<>());
+        ctxV4.registerUserType(10, loader.loadClass("data.evolvable.v4.Address"),
+                               new PortableTypeSerializer(10, loader.loadClass("data.evolvable.v4.Address")));
+        ctxV4.registerUserType(1000, allTypes, new PortableTypeSerializer(1000, allTypes));
         }
 
     @Test
+    public void testRecordRoundTripV3() throws Exception
+        {
+        Class<?> clz = ctxV3.getClass(10);
+        Object address = clz.getDeclaredConstructor(String.class, String.class, String.class).newInstance("100 Main St", "Tampa", "FL");
+        Binary binAddress = ExternalizableHelper.toBinary(address, ctxV3);
+        assertEquals(address, ExternalizableHelper.fromBinary(binAddress, ctxV3));
+        }
+
+    @Test
+    public void testRecordRoundTripV4() throws Exception
+        {
+        Class<?> clz = ctxV4.getClass(10);
+        Object address = clz.getDeclaredConstructor(String.class, String.class, String.class, Integer.TYPE, String.class)
+                .newInstance("100 Main St", "Tampa", "FL", 33559, "USA");
+        Binary binAddress = ExternalizableHelper.toBinary(address, ctxV4);
+        assertEquals(address, ExternalizableHelper.fromBinary(binAddress, ctxV4));
+        }
+
+    @Test
+    public void testRecordEvolution() throws Exception
+        {
+        Class<?> clz = ctxV4.getClass(10);
+        Object addressV4 = clz.getDeclaredConstructor(String.class, String.class, String.class, Integer.TYPE, String.class)
+                .newInstance("100 Main St", "Tampa", "FL", 33559, "USA");
+        Binary binAddressV4 = ExternalizableHelper.toBinary(addressV4, ctxV4);
+        assertEquals(addressV4, ExternalizableHelper.fromBinary(binAddressV4, ctxV4));
+
+        Object addressV3 = ExternalizableHelper.fromBinary(binAddressV4, ctxV3);
+        Binary binAddressV3 = ExternalizableHelper.toBinary(addressV3, ctxV3);
+
+        Object address = ExternalizableHelper.fromBinary(binAddressV3, ctxV4);
+        assertEquals(addressV4, address);
+        }
+    
+    @Test
     public void shouldBeEvolvableWithIgnoredFieldsRemoved() throws Exception
         {
-        Class            clzDogV4   = loader.loadClass("data.evolvable.v4.Dog");
-        SimplePofContext pofContext = new SimplePofContext();
-
-        pofContext.registerUserType(2, clzDogV4, new PortableTypeSerializer(2, clzDogV4));
-        pofContext.registerUserType(5, Color.class, new EnumPofSerializer<>());
-        pofContext.registerUserType(1, loader.loadClass("data.evolvable.v3.Pet"),
-                             new PortableTypeSerializer(1, loader.loadClass("data.evolvable.v3.Pet")));
-        pofContext.registerUserType(3, loader.loadClass("data.evolvable.v3.Animal"),
-                             new PortableTypeSerializer(3, loader.loadClass("data.evolvable.v3.Animal")));
-
-
-        Object dogV3    = dogCtor.newInstance("Nadia", 10, "Boxer", Color.BRINDLE);
-        Binary binDogV3 = ExternalizableHelper.toBinary(dogV3, ctx);
-        Object dogV4    = ExternalizableHelper.fromBinary(binDogV3, pofContext);
-        Binary binDogV4 = ExternalizableHelper.toBinary(dogV4, pofContext);
-        Object dog      = ExternalizableHelper.fromBinary(binDogV4, ctx);
+        Object dogV3    = ctxV3.getClass(2)
+                .getConstructor(String.class, Integer.TYPE, String.class, Color.class)
+                .newInstance("Nadia", 10, "Boxer", Color.BRINDLE);
+        Binary binDogV3 = ExternalizableHelper.toBinary(dogV3, ctxV3);
+        Object dogV4    = ExternalizableHelper.fromBinary(binDogV3, ctxV4);
+        Binary binDogV4 = ExternalizableHelper.toBinary(dogV4, ctxV4);
+        Object dog      = ExternalizableHelper.fromBinary(binDogV4, ctxV3);
 
         assertThat(dog, is(dogV3));
         }
@@ -119,9 +150,9 @@ public class PortableTypeGeneratorTest
     @Test
     public void testAllTypesRoundTrip() throws Exception
         {
-        DateTypes expected = (DateTypes) allTypesCtor.newInstance();
-        Binary    binObj   = ExternalizableHelper.toBinary(expected, ctx);
-        DateTypes actual   = ExternalizableHelper.fromBinary(binObj, ctx);
+        DateTypes expected = (DateTypes) ctxV3.getClass(1000).getConstructor().newInstance();
+        Binary    binObj   = ExternalizableHelper.toBinary(expected, ctxV3);
+        DateTypes actual   = ExternalizableHelper.fromBinary(binObj, ctxV3);
 
         assertEquals(expected, actual);
         assertDateEquals(expected.getDate(), actual.getDate());
@@ -132,9 +163,11 @@ public class PortableTypeGeneratorTest
     @Test
     public void testPofNavigator() throws Exception
         {
-        Object   dog = dogCtor.newInstance("Nadia", 10, "Boxer", Color.BRINDLE);
-        Binary   binDog = ExternalizableHelper.toBinary(dog, ctx);
-        PofValue pofDog = PofValueParser.parse(binDog, ctx);
+        Object   dog    = ctxV3.getClass(2)
+                .getConstructor(String.class, Integer.TYPE, String.class, Color.class)
+                .newInstance("Nadia", 10, "Boxer", Color.BRINDLE);
+        Binary   binDog = ExternalizableHelper.toBinary(dog, ctxV3);
+        PofValue pofDog = PofValueParser.parse(binDog, ctxV3);
 
         assertEquals("Nadia", getPofNavigator(dog.getClass(), "name")
                 .navigate(pofDog).getString());
@@ -147,12 +180,13 @@ public class PortableTypeGeneratorTest
         }
 
     @Test
-    public void testPofExtractor()
-    throws Exception
+    public void testPofExtractor() throws Exception
         {
-        Object      dog      = dogCtor.newInstance("Nadia", 10, "Boxer", Color.BRINDLE);
-        Binary      binDog   = ExternalizableHelper.toBinary(dog, ctx);
-        BinaryEntry binEntry = new PofExtractorTest.TestBinaryEntry(null, binDog, ctx);
+        Object      dog      = ctxV3.getClass(2)
+                .getConstructor(String.class, Integer.TYPE, String.class, Color.class)
+                .newInstance("Nadia", 10, "Boxer", Color.BRINDLE);
+        Binary      binDog   = ExternalizableHelper.toBinary(dog, ctxV3);
+        BinaryEntry binEntry = new PofExtractorTest.TestBinaryEntry(null, binDog, ctxV3);
 
         assertEquals("Nadia", getPofExtractor(dog.getClass(), "name")
                 .extractFromEntry(binEntry));
@@ -172,13 +206,16 @@ public class PortableTypeGeneratorTest
     @Test
     public void testEmptySubClass() throws Exception
         {
-        Object terrier = terrierCtor.newInstance("Bullseye", 10, Color.WHITE);
-        Binary binDog = ExternalizableHelper.toBinary(terrier, ctx);
-        Object result = ExternalizableHelper.fromBinary(binDog, ctx);
+        Object terrier = ctxV3.getClass(200)
+                .getConstructor(String.class, Integer.TYPE, Color.class)
+                .newInstance("Bullseye", 10, Color.WHITE);
+        Binary binDog  = ExternalizableHelper.toBinary(terrier, ctxV3);
+        Object result  = ExternalizableHelper.fromBinary(binDog, ctxV3);
 
         assertThat(result, is(notNullValue()));
         }
 
+    @SuppressWarnings("deprecation")
     private static void assertDateEquals(Date expected, Date actual)
         {
         assertEquals(expected.getYear(), actual.getYear());
@@ -186,6 +223,7 @@ public class PortableTypeGeneratorTest
         assertEquals(expected.getDate(), actual.getDate());
         }
 
+    @SuppressWarnings("deprecation")
     private static void assertTimeEquals(Date expected, Date actual)
         {
         assertEquals(expected.getHours(), actual.getHours());
@@ -199,12 +237,12 @@ public class PortableTypeGeneratorTest
     public void shouldCreateSchemaForPackagedClass() throws Exception
         {
         String         sClassName   = PackagedType.class.getName();
-        URL url          = getClass().getResource("/" + sClassName.replaceAll("\\.", "/") + ".class");
-        File fileClass    = new File(url.toURI());
-        Map<String, ?> env           = new HashMap<>();
+        URL            url          = getClass().getResource("/" + sClassName.replaceAll("\\.", "/") + ".class");
+        File           fileClass    = new File(url.toURI());
+        Map<String, ?> env          = new HashMap<>();
 
         Schema schema = PortableTypeGenerator.createSchema(fileClass, env);
-        MatcherAssert.assertThat(schema, is(notNullValue()));
+        assertThat(schema, is(notNullValue()));
         }
 
     @Test
@@ -214,18 +252,18 @@ public class PortableTypeGeneratorTest
         URL            url          = getClass().getResource("/" + sClassName.replaceAll("\\.", "/") + ".class");
         File           fileClass    = new File(url.toURI());
         byte[]         abBytes      = Files.readAllBytes(fileClass.toPath());
-        Properties properties   = new Properties();
+        Properties     properties   = new Properties();
         Map<String, ?> env          = new HashMap<>();
         byte[]         instrumented = PortableTypeGenerator.instrumentClass(fileClass, abBytes, 0, abBytes.length, properties, env);
 
-        MatcherAssert.assertThat(instrumented, is(notNullValue()));
+        assertThat(instrumented, is(notNullValue()));
 
         ByteArrayClassLoader loader = new ByteArrayClassLoader(Collections.singletonMap(sClassName, instrumented));
         Class<?> instrumentedClass = loader.findClass(PackagedType.class.getName());
 
-        MatcherAssert.assertThat(instrumentedClass.isAnnotationPresent(Instrumented.class), is(true));
-        MatcherAssert.assertThat(PortableObject.class.isAssignableFrom(instrumentedClass), is(true));
-        MatcherAssert.assertThat(EvolvableObject.class.isAssignableFrom(instrumentedClass), is(true));
+        assertThat(instrumentedClass.isAnnotationPresent(Instrumented.class), is(true));
+        assertThat(PortableObject.class.isAssignableFrom(instrumentedClass), is(true));
+        assertThat(EvolvableObject.class.isAssignableFrom(instrumentedClass), is(true));
         }
 
     @Test
@@ -234,10 +272,10 @@ public class PortableTypeGeneratorTest
         String         sClassName   = "NonPackagedType";
         URL            url          = getClass().getResource("/" + sClassName + ".class");
         File           fileClass    = new File(url.toURI());
-        Map<String, ?> env           = new HashMap<>();
+        Map<String, ?> env          = new HashMap<>();
 
         Schema schema = PortableTypeGenerator.createSchema(fileClass, env);
-        MatcherAssert.assertThat(schema, is(notNullValue()));
+        assertThat(schema, is(notNullValue()));
         }
 
     @Test
@@ -264,7 +302,7 @@ public class PortableTypeGeneratorTest
 
         Binary            binTestClass  = ExternalizableHelper.toBinary(testClass, ctx);
         Object            result        = ExternalizableHelper.fromBinary(binTestClass, ctx);
-        MatcherAssert.assertThat(result, is(equalTo(testClass)));
+        assertThat(result, is(equalTo(testClass)));
         }
 
     @Test
@@ -290,7 +328,7 @@ public class PortableTypeGeneratorTest
         Object testClass = instrumentedClass.getDeclaredConstructor(String.class, Integer.TYPE).newInstance("name", 10);
         Binary            binTestClass  = ExternalizableHelper.toBinary(testClass, ctx);
         Object            result        = ExternalizableHelper.fromBinary(binTestClass, ctx);
-        MatcherAssert.assertThat(result, is(equalTo(testClass)));
+        assertThat(result, is(equalTo(testClass)));
         }
 
     @Test
@@ -304,14 +342,14 @@ public class PortableTypeGeneratorTest
         Map<String, ?> env          = new HashMap<>();
         byte[]         instrumented = PortableTypeGenerator.instrumentClass(fileClass, abBytes, 0, abBytes.length, properties, env);
 
-        MatcherAssert.assertThat(instrumented, is(notNullValue()));
+        assertThat(instrumented, is(notNullValue()));
 
         ByteArrayClassLoader loader = new ByteArrayClassLoader(Collections.singletonMap(sClassName, instrumented));
         Class<?> instrumentedClass = loader.findClass(sClassName);
 
-        MatcherAssert.assertThat(instrumentedClass.isAnnotationPresent(Instrumented.class), is(true));
-        MatcherAssert.assertThat(PortableObject.class.isAssignableFrom(instrumentedClass), is(true));
-        MatcherAssert.assertThat(EvolvableObject.class.isAssignableFrom(instrumentedClass), is(true));
+        assertThat(instrumentedClass.isAnnotationPresent(Instrumented.class), is(true));
+        assertThat(PortableObject.class.isAssignableFrom(instrumentedClass), is(true));
+        assertThat(EvolvableObject.class.isAssignableFrom(instrumentedClass), is(true));
         }
 
     // ----- inner class: ByteArrayClassLoader ------------------------------
